--- a/themes/blits/assets/css/main.css
+++ b/themes/blits/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap");
+
 body {
 	margin: 0;
 	padding: 0;
@@ -16,7 +18,13 @@ header {
 header h1 {
 	font-size: 2rem;
 	margin: 0;
+	font-family: "Atomic Age", system-ui;
 	font-weight: 600;
+}
+
+header h1 a {
+	text-decoration: none;
+	color: inherit;
 }
 
 nav {
@@ -45,13 +53,14 @@ main {
 	line-height: 1.6;
 }
 
-main h2 {
+main h1 {
 	margin-bottom: 1.5rem;
+	font-family: "Atomic Age", system-ui;
 	font-size: 2rem;
 	font-weight: 600;
 }
 
-main h3 {
+main h2 {
 	margin-top: 2.5rem;
 	font-weight: 500;
 }
