--- a/themes/blits/assets/css/main.css
+++ b/themes/blits/assets/css/main.css
@@ -1,4 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap");
+@font-face {
+	font-family: "nove";
+	src:
+		url("/fonts/nove/nove1.2-webfont.eot?#iefix")
+			format("embedded-opentype"),
+		url("/fonts/nove/nove1.2-webfont.woff2") format("woff2"),
+		url("/fonts/nove/nove1.2-webfont.woff") format("woff"),
+		url("/fonts/nove/nove1.2-webfont.ttf") format("truetype"),
+		url("/fonts/nove/nove1.2-webfont.svg#noveregular") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
 
 body {
 	margin: 0;
@@ -18,7 +29,7 @@ header {
 header h1 {
 	font-size: 2rem;
 	margin: 0;
-	font-family: "Atomic Age", system-ui;
+	font-family: "nove", system-ui;
 	font-weight: 600;
 }
 
@@ -55,13 +66,14 @@ main {
 
 main h1 {
 	margin-bottom: 1.5rem;
-	font-family: "Atomic Age", system-ui;
+	font-family: "nove", system-ui;
 	font-size: 2rem;
 	font-weight: 600;
 }
 
 main h2 {
 	margin-top: 2.5rem;
+	font-family: "nove", system-ui;
 	font-weight: 500;
 }
 
